# micro

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  docker-compose-backup-test.yml  docker-compose-cpu-runner.yml  docker-compose-gpu-runner-cuda-12-0.yml  docker-compose-gpu-runner.yml  docker-compose-runner-nightly.yml  docker-compose-runner.yml  docker-compose.yml  flake.nix  package.json  tarpaulin.toml
core/lib/basic_types/: Cargo.toml
core/lib/basic_types/src/: lib.rs  network.rs
core/lib/circuit_breaker/: Cargo.toml
core/lib/circuit_breaker/src/: facet_selectors.rs  l1_txs.rs  lib.rs  replication_lag.rs  utils.rs  vks.rs
core/lib/commitment_utils/: Cargo.toml
core/lib/commitment_utils/src/: lib.rs
core/lib/config/: Cargo.toml
core/lib/config/src/: lib.rs
core/lib/contracts/: Cargo.toml
core/lib/contracts/src/: lib.rs
core/lib/crypto/: Cargo.toml  README.md
core/lib/crypto/src/: lib.rs  primitives.rs  proof.rs  serialization.rs
core/lib/dal/: Cargo.toml  build.rs  sqlx-data.json
core/lib/dal/migrations/: 20231102073918_assignments_add.down.sql  20231102073918_assignments_add.up.sql  20231201073918_assignments_upgrage.up.sql  20231227113918_assignments_upgrage.up.sql  20240112140218_application_monitor_add.down.sql  20240112140218_application_monitor_add.up.sql
core/lib/dal/src/: accounts_dal.rs  application_monitor_dal.rs  assignment_user_summary_dal.rs  assignments_dal.rs  basic_witness_input_producer_dal.rs  blocks_dal.rs  blocks_web3_dal.rs  consensus_dal.rs  contract_verification_dal.rs  eth_sender_dal.rs  events_dal.rs  events_web3_dal.rs  fee_monitor_dal.rs  fri_gpu_prover_queue_dal.rs  fri_proof_compressor_dal.rs  fri_protocol_versions_dal.rs  fri_prover_dal.rs  fri_scheduler_dependency_tracker_dal.rs  fri_witness_generator_dal.rs  gpu_prover_queue_dal.rs  healthcheck.rs  instrument.rs  lib.rs  proof_generation_dal.rs  protocol_versions_dal.rs  protocol_versions_web3_dal.rs  prover_dal.rs  snapshots_creator_dal.rs  snapshots_dal.rs  storage_dal.rs  storage_load_dal.rs  storage_logs_dal.rs  storage_logs_dedup_dal.rs  storage_web3_dal.rs  sync_dal.rs  tokens_dal.rs  tokens_web3_dal.rs  transactions_dal.rs  transactions_web3_dal.rs  witness_generator_dal.rs
core/lib/db_storage_provider/: Cargo.toml
core/lib/db_storage_provider/src/: lib.rs
core/lib/env_config/: Cargo.toml
core/lib/env_config/src/: alerts.rs  api.rs  chain.rs  circuit_synthesizer.rs  contract_verifier.rs  contracts.rs  database.rs  eth_client.rs  eth_sender.rs  eth_watch.rs  fetcher.rs  fri_proof_compressor.rs  fri_prover.rs  fri_prover_dashboard.rs  fri_prover_gateway.rs  fri_prover_group.rs  fri_prover_task_apply.rs  fri_witness_generator.rs  fri_witness_vector_generator.rs  house_keeper.rs  lib.rs  monitor.rs  object_store.rs  proof_data_handler.rs  prover.rs  prover_group.rs  snapshots_creator.rs  test_utils.rs  utils.rs  witness_generator.rs
core/lib/eth_client/: Cargo.toml
core/lib/eth_client/src/: lib.rs  types.rs
core/lib/health_check/: Cargo.toml
core/lib/mempool/: Cargo.toml
core/lib/mempool/src/: mempool_store.rs  tests.rs  types.rs
core/lib/merkle_tree/: Cargo.toml  README.md
core/lib/merkle_tree/examples/: recovery.rs
core/lib/merkle_tree/src/: consistency.rs  domain.rs  errors.rs  lib.rs  micro_tree.rs  patch.rs  recovery.rs  storage.rs  tests.rs  tree_config.rs  types.rs  utils.rs
core/lib/merkle_tree2/: Cargo.toml  README.md
core/lib/merkle_tree2/src/: consistency.rs  domain.rs  errors.rs  hasher.rs  lib.rs  types.rs
core/lib/micro_core/: Cargo.toml  build.rs
core/lib/micro_core/src/: genesis.rs  lib.rs  metrics.rs  temp_config_store.rs
core/lib/mini_merkle_tree/: Cargo.toml  README.md
core/lib/mini_merkle_tree/benches/: tree.rs
core/lib/mini_merkle_tree/src/: lib.rs
core/lib/multivm/: Cargo.toml
core/lib/multivm/src/: lib.rs  (+1 more)
prover/circuit_synthesizer/: Cargo.toml
prover/circuit_synthesizer/src/: circuit_synthesizer.rs  main.rs
prover/proof_fri_compressor/: Cargo.toml  README.md
prover/proof_fri_compressor/src/: compressor.rs  main.rs
prover/prover/: Cargo.toml
prover/prover/src/: artifact_provider.rs  main.rs  prover.rs  prover_params.rs  run.rs  socket_listener.rs  synthesized_circuit_provider.rs
prover/prover_fri/: Cargo.toml  README.md
prover/prover_fri/src/: gpu_prover_job_processor.rs  main.rs  prover_job_processor.rs  socket_listener.rs  utils.rs
prover/prover_fri/tests/: basic_test.rs
prover/prover_fri_dashboard/: Cargo.toml
prover/prover_fri_dashboard/src/: application.rs  application_monitor.rs  dashboard.rs  deposit.rs  error.rs  main.rs  node.rs  task.rs
prover/prover_fri_gateway/: Cargo.toml
prover/prover_fri_gateway/src/: api_data_fetcher.rs  main.rs  proof_gen_data_fetcher.rs  proof_submitter.rs
prover/prover_fri_task_apply/: Cargo.toml
prover/prover_fri_task_apply/src/: caller.rs  client.rs  error.rs  main.rs  micro_watch.rs  task_apply.rs  wallet.rs
prover/prover_fri_types/: Cargo.toml
prover/prover_fri_types/src/: lib.rs
prover/prover_fri_utils/: Cargo.toml
prover/prover_fri_utils/src/: app_monitor.rs  lib.rs  metrics.rs  socket_utils.rs  sync_status.rs
prover/setup_key_generator_and_server/: Cargo.toml
prover/setup_key_generator_and_server/src/: lib.rs  main.rs
prover/vk_setup_data_generator_server_fri/: Cargo.toml  README.md
prover/vk_setup_data_generator_server_fri/src/: commitment_generator.rs  commitment_utils.rs  lib.rs  main.rs  setup_data_generator.rs  tests.rs  utils.rs  vk_generator.rs
prover/witness_generator/: Cargo.toml  README.md
prover/witness_generator/src/: basic_circuits.rs  leaf_aggregation.rs  main.rs  metrics.rs  node_aggregation.rs  precalculated_merkle_paths_provider.rs  scheduler.rs  storage_oracle.rs  tests.rs  utils.rs
prover/witness_generator/tests/: basic_test.rs
sdk/micro-rs/: CHANGELOG.md  Cargo.toml  README.md
sdk/micro-rs/src/: error.rs  lib.rs  signer.rs  utils.rs  wallet.rs
sdk/micro-rs/tests/: integration.rs  unit.rs
(+1365 files in other folders)
