[package]
name = "micro_circuit_synthesizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "micro_circuit_synthesizer"
path = "src/main.rs"

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", branch = "main" }

micro_dal = { path = "../../core/lib/dal" }
micro_types = { path = "../../core/lib/types" }
micro_queued_job_processor = { path = "../../core/lib/queued_job_processor" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_object_store = { path = "../../core/lib/object_store" }
micro_utils = { path = "../../core/lib/utils" }
micro_prover_fri_utils = { path = "../prover_fri_utils" }
vlog = { path = "../../core/lib/vlog" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }
micro_verification_key_generator_and_server = { path = "../../core/bin/verification_key_generator_and_server" }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.3.3" }

prover-service = { git = "https://github.com/ZKAmoeba-Micro/micro-heavy-ops-service.git", branch = "v1.3.3", features = [
    "legacy",
], default-features = false }

anyhow = "1.0"
structopt = "0.3.26"
thiserror = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3"
ctrlc = { version = "3.1", features = ["termination"] }
local-ip-address = "0.5.0"
tracing = "0.1"
