[package]
name = "micro_proof_fri_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", branch = "main" }

micro_types = { path = "../../core/lib/types" }
micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_object_store = { path = "../../core/lib/object_store" }
micro_utils = { path = "../../core/lib/utils" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
micro_prover_fri_types = { path = "../prover_fri_types" }
micro_queued_job_processor = { path = "../../core/lib/queued_job_processor" }
vk_setup_data_generator_server_fri = { path = "../vk_setup_data_generator_server_fri" }
vlog = { path = "../../core/lib/vlog" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0" }

anyhow = "1.0"
tracing = "0.1"
structopt = "0.3.26"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
bincode = "1.0"
