[package]
name = "micro_prover"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]
publish = false # We don't want to publish our binaries.

[dependencies]
micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
micro_utils = { path = "../../core/lib/utils" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }
micro_circuit_breaker = { path = "../../core/lib/circuit_breaker" }
micro_eth_client = { path = "../../core/lib/eth_client" }
micro_types = { path = "../../core/lib/types" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }
micro_verification_key_generator_and_server = { path = "../../core/bin/verification_key_generator_and_server" }
micro_object_store = { path = "../../core/lib/object_store" }
setup_key_generator_and_server = { path = "../setup_key_generator_and_server" }

api = { git = "https://github.com/ZKAmoeba-Micro/micro-heavy-ops-service.git", branch = "v1.3.3", features = [
    "gpu",
], default-features = false }
prover-service = { git = "https://github.com/ZKAmoeba-Micro/micro-heavy-ops-service.git", branch = "v1.3.3", features = [
    "gpu",
], default-features = false }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.3.3" }

anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
ctrlc = { version = "3.1", features = ["termination"] }
thiserror = "1.0"
chrono = "0.4"
serde_json = "1.0"
ethabi = "18.0.0"
metrics = "0.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
reqwest = { version = "0.11", features = ["blocking"] }
queues = "1.1.0"
local-ip-address = "0.5.0"
