[package]
name = "micro_prover_fri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_types = { path = "../../core/lib/types" }
micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }
micro_object_store = { path = "../../core/lib/object_store" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }
micro_queued_job_processor = { path = "../../core/lib/queued_job_processor" }
micro_prover_fri_utils = { path = "../prover_fri_utils" }
micro_prover_fri_types = { path = "../prover_fri_types" }
micro_utils = { path = "../../core/lib/utils" }
vk_setup_data_generator_server_fri = { path = "../vk_setup_data_generator_server_fri" }
shivini = { git = "https://github.com/ZKAmoeba-Micro/micro-shivini.git", branch = "rr-allocations-improvements", optional = true, features = [
    "circuit_definitions",
    "micro",
] }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0" }
circuit_definitions = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0", features = [
    "log_tracing",
] }

anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
ctrlc = { version = "3.1", features = ["termination"] }
metrics = "0.21"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
local-ip-address = "0.5.0"

[features]
default = []
gpu = ["shivini", "vk_setup_data_generator_server_fri/gpu"]
