[package]
name = "micro_prover_fri_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_utils = { path = "../../core/lib/utils" }
vlog = { path = "../../core/lib/vlog" }
micro_types = { path = "../../core/lib/types" }
micro_contracts = { path = "../../core/lib/contracts" }
micro_web3_decl = { path = "../../core/lib/web3_decl", default-features = false, features = [
    "client",
] }
micro_system_constants = { path = "../../core/lib/constants" }

anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
axum = "0.7.3"
serde = "1.0.90"
serde_json = "1.0.0"
bigdecimal = "0.2.2"
