[package]
name = "micro_prover_fri_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", branch = "main" }

micro_types = { path = "../../core/lib/types" }
micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_object_store = { path = "../../core/lib/object_store" }
micro_utils = { path = "../../core/lib/utils" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }
micro_prover_fri_utils = { path = "../prover_fri_utils" }

anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["time"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
chrono = "0.4"
