[package]
name = "micro_prover_fri_task_apply"
version = "0.1.0"
edition = "2021"

[dependencies]
micro_types = { path = "../../core/lib/types" }
micro_dal = { path = "../../core/lib/dal" }
micro_contracts = { path = "../../core/lib/contracts" }
micro_system_constants = { path = "../../core/lib/constants" }
micro_eth_client = { path = "../../core/lib/eth_client" }
micro_eth_signer = { path = "../../core/lib/eth_signer" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_utils = { path = "../../core/lib/utils" }
micro = { path = "../../sdk/micro-rs" }
vlog = { path = "../../core/lib/vlog" }
micro_prover_fri_utils = { path = "../prover_fri_utils" }


anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.21"
log = "0.4.20"
chrono = "0.4"
thiserror = "1.0"
