[package]
name = "micro_prover_fri_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", branch = "main" }

micro_object_store = { path = "../../core/lib/object_store" }
micro_config = { path = "../../core/lib/config" }
micro_types = { path = "../../core/lib/types" }
micro_prover_fri_types = { path = "../prover_fri_types" }
micro_dal = { path = "../../core/lib/dal" }

tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
