[package]
name = "vk_setup_data_generator_server_fri"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "micro_vk_generator_fri"
path = "src/main.rs"

[[bin]]
name = "micro_setup_data_generator_fri"
path = "src/setup_data_generator.rs"

[lib]
name = "micro_vk_setup_data_server_fri"
path = "src/lib.rs"

[[bin]]
name = "micro_commitment_generator_fri"
path = "src/commitment_generator.rs"

[dependencies]
vlog = { path = "../../core/lib/vlog" }
micro_types = { path = "../../core/lib/types" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }
micro_prover_fri_types = { path = "../prover_fri_types" }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0" }
circuit_definitions = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0", features = [
    "log_tracing",
] }
shivini = { git = "https://github.com/ZKAmoeba-Micro/micro-shivini.git", branch = "rr-allocations-improvements", optional = true }
micro_config = { path = "../../core/lib/config" }

anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
itertools = "0.10.5"
bincode = "1"
structopt = "0.3.26"
once_cell = "1.8.0"

[dev-dependencies]
proptest = "1.2.0"

[features]
default = []
gpu = ["shivini"]
