[package]
name = "micro_witness_generator"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]
publish = false                                        # We don't want to publish our binaries.

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", branch = "main" }

micro_dal = { path = "../../core/lib/dal" }
micro_config = { path = "../../core/lib/config" }
micro_env_config = { path = "../../core/lib/env_config" }
micro_system_constants = { path = "../../core/lib/constants" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }
micro_queued_job_processor = { path = "../../core/lib/queued_job_processor" }
multivm = { path = "../../core/lib/multivm", version = "0.1.0" }
micro_object_store = { path = "../../core/lib/object_store" }
micro_types = { path = "../../core/lib/types" }
micro_state = { path = "../../core/lib/state" }
micro_utils = { path = "../../core/lib/utils" }
vk_setup_data_generator_server_fri = { path = "../vk_setup_data_generator_server_fri" }
micro_prover_utils = { path = "../../core/lib/prover_utils" }
micro_prover_fri_types = { path = "../prover_fri_types" }
micro_prover_fri_utils = { path = "../prover_fri_utils" }

zkevm_test_harness = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0" }
circuit_definitions = { git = "https://github.com/ZKAmoeba-Micro/micro-zkevm_test_harness.git", branch = "v1.4.0", features = [
    "log_tracing",
] }
zk_evm = { git = "https://github.com/ZKAmoeba-Micro/micro-zk_evm.git", branch = "v1.4.0" }

anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bincode = "1"
rand = "0.8"
hex = "0.4"
structopt = "0.3.26"
ctrlc = { version = "3.1", features = ["termination"] }
const-decoder = "0.3.0"
