[package]
name = "micro"
version = "0.4.0"
authors = []
edition = "2018"

[dependencies]
micro_types = { path = "../../core/lib/types", version = "1.0" }
micro_utils = { path = "../../core/lib/utils", version = "1.0" }
micro_eth_client = { path = "../../core/lib/eth_client", version = "1.0" }
micro_eth_signer = { path = "../../core/lib/eth_signer", version = "1.0" }
micro_web3_decl = { path = "../../core/lib/web3_decl", version = "1.0", default-features = false, features = [
    "client",
] }

tokio = { version = "1", features = ["time"] }

serde_json = "1.0"
num = { version = "0.3.1", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
micro_config = { path = "../../core/lib/config", version = "1.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hex = "0.4"

[features]
integration-tests = []
mint = []
