[package]
name = "micro_basic_types"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
web3 = { version= "0.18.0", default-features = false, features = ["http-rustls-tls", "test", "signing"] }
serde = { version = "1.0", features = ["derive"] }
