[package]
name = "micro_basic_types"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
web3 = { version = "0.19.0", default-features = false, features = [
    "http-rustls-tls",
    "test",
    "signing",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
