[package]
name = "micro_circuit_breaker"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_types = { path = "../types", version = "1.0" }
micro_config = { path = "../config", version = "1.0" }
micro_contracts = { path = "../contracts", version = "1.0" }
micro_dal = { path = "../dal", version = "1.0" }
micro_eth_client = { path = "../eth_client", version = "1.0" }
micro_utils = { path = "../utils", version = "1.0" }
micro_verification_key_generator_and_server = { path = "../../bin/verification_key_generator_and_server", version = "1.0" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
hex = "0.4"
convert_case = "0.6.0"
backon = "0.4.0"
assert_matches = "1.5.0"
