[package]
name = "micro_circuit_breaker"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_types = { path = "../types" }
micro_config = { path = "../config" }
micro_contracts = { path = "../contracts" }
micro_dal = { path = "../dal" }
micro_eth_client = { path = "../eth_client" }
thiserror = "1.0"
serde_json = "1.0"
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1", features = ["time"] }
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
convert_case = "0.6.0"
backon = "0.4.0"
metrics = "0.21"
tracing = "0.1.26"

[dev-dependencies]
assert_matches = "1.5.0"
