[package]
name = "micro_config"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_basic_types = { path = "../../lib/basic_types", version = "1.0" }
micro_utils = { path = "../../lib/utils", version = "1.0" }
micro_contracts = { path = "../../lib/contracts", version = "1.0" }

url = "2.1"
num = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
once_cell = "1.13.0"
bigdecimal = "0.2.0"
