[package]
name = "micro_config"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_basic_types = { path = "../../lib/basic_types" }
micro_utils = { path = "../../lib/utils" }
micro_contracts = { path = "../../lib/contracts" }

anyhow = "1.0"
url = "2.1"
num = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
once_cell = "1.13.0"
bigdecimal = "0.2.2"
hex = "0.4"
