[package]
name = "micro_contracts"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
ethabi = "16.0.0"
serde_json = "1.0"
serde = "1.0"
micro_utils = { path = "../utils", version = "1.0" }
once_cell = "1.7"
hex = "0.4"
