[package]
name = "micro_contracts"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_utils = { path = "../utils" }

ethabi = "18.0.0"
serde_json = "1.0"
serde = "1.0"
once_cell = "1.7"
hex = "0.4"
envy = "0.4"
