[package]
name = "micro_crypto"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
#franklin-crypto = {git = "https://github.com/ZKAmoeba-Micro/franklin-crypto", branch = "dev", features = ["multicore", "plonk"]}
#recursive_aggregation_circuit = { version = "1.0.0", git = "https://github.com/ZKAmoeba-Micro/recursive_aggregation_circuit.git"}
#rescue_poseidon = { version = "0.4.0", git = "https://github.com/ZKAmoeba-Micro/rescue-poseidon.git", branch="dev-dep" }
rand = "0.4"

micro_basic_types = { path = "../basic_types", version = "1.0" }
serde = "1.0"
thiserror = "1.0"
once_cell = "1.7"
hex = "0.4"
base64 = "0.13"
sha2 = "0.9"
blake2 = "0.10"

[dev-dependencies]
serde_json = "1.0"

