[package]
name = "micro_dal"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
vlog = { path = "../../lib/vlog", version = "1.0" }
vm = { path = "../vm", version = "0.1.0" }
micro_utils = { path = "../utils", version = "1.0" }
micro_config = { path = "../config", version = "1.0" }
micro_contracts = { path = "../contracts", version = "1.0" }
micro_types = { path = "../types", version = "1.0" }
micro_state = { path = "../state", version = "1.0" }
micro_storage = { path = "../storage", version = "1.0" }
micro_web3_decl = { path = "../web3_decl", version = "1.0" }
micro_health_check = { path = "../health_check", version = "0.1.0" }

itertools = "0.10.1"
thiserror = "1.0"
anyhow = "1.0"
metrics = "0.20"
async-std = "1.12.0"
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-async-std-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "chrono",
    "json",
    "offline",
    "migrate",
    "ipnetwork"
] }
serde_json = "1.0"
bigdecimal = "0.2.0"
bincode = "1"
num = "0.3.1"
hex = "0.4"
once_cell = "1.7"

[dev-dependencies]
db_test_macro = { path = "../db_test_macro", version = "0.1.0" }
tokio = { version = "1", features = ["time"] }
#criterion = "0.3.0"
