[package]
name = "micro_dal"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", version = "0.1.0", rev = "9d097ab747b037b6e62504df1db5b975425b6bdd" }
micro_utils = { path = "../utils" }
micro_config = { path = "../config" }
micro_contracts = { path = "../contracts" }
micro_types = { path = "../types" }
micro_health_check = { path = "../health_check" }

itertools = "0.10.1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.13", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "chrono",
    "json",
    "offline",
    "migrate",
    "ipnetwork",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = "0.2.2"
bincode = "1"
num = "0.3.1"
hex = "0.4"
once_cell = "1.7"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.5.0"
db_test_macro = { path = "../db_test_macro" }
