[package]
name = "micro_eth_client"
version = "0.1.0"
edition = "2018"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", version = "0.1.0", rev = "9d097ab747b037b6e62504df1db5b975425b6bdd" }
micro_types = { path = "../types" }
micro_eth_signer = { path = "../eth_signer" }
micro_config = { path = "../config" }
micro_contracts = { path = "../contracts" }

jsonrpc-core = "18"
serde = "1.0.90"
hex = "0.4"
anyhow = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
