[package]
name = "micro_health_check"
version = "0.1.0"
edition = "2021"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1", features = ["macros", "rt"] }
