[package]
name = "micro_merkle_tree"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_types = { path = "../../lib/types", version = "1.0" }
micro_crypto = { path = "../../lib/crypto", version = "1.0" }
micro_storage = { path = "../../lib/storage", version = "1.0", default-features = false }
micro_utils = { path = "../../lib/utils", version = "1.0" }
micro_config = { path = "../../lib/config", version = "1.0" }

vlog = { path = "../../lib/vlog", version = "1.0" }

itertools = "0.10"
rayon = "1.3.0"
once_cell = "1.7"
thiserror = "1.0"
bincode = "1"
serde = "1.0.90"
metrics = "0.20"
byteorder = "1.3"

[dev-dependencies]
tempfile = "3.0.2"
