[package]
name = "micro_merkle_tree"
version = "0.1.0"
edition = "2021"
authors = []
homepage = "https://www.zkamoeba.com/"
repository = "https://github.com/ZKAmoeba-Micro/micro-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
vise = { git = "https://github.com/ZKAmoeba-Micro/vise.git", version = "0.1.0", rev = "9d097ab747b037b6e62504df1db5b975425b6bdd" }
micro_types = { path = "../types" }
micro_crypto = { path = "../crypto" }
micro_storage = { path = "../storage", default-features = false }
micro_utils = { path = "../utils" }

leb128 = "0.2.5"
once_cell = "1.17.1"
rayon = "1.3.1"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
micro_config = { path = "../config" }

assert_matches = "1.5.0"
clap = { version = "4.2.2", features = ["derive"] }
insta = { version = "1.29.0", features = ["yaml"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["hex"] }
tempfile = "3.0.2"
