[package]
name = "micro_merkle_tree2"
version = "1.0.0"
edition = "2021"
authors = []
homepage = ""
repository = "https://github.com/zkamoeba/micro-2"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_types = { path = "../../lib/types", version = "1.0" }
micro_crypto = { path = "../../lib/crypto", version = "1.0" }
micro_storage = { path = "../../lib/storage", version = "1.0", default-features = false }

leb128 = "0.2.5"
metrics = "0.20.1"
once_cell = "1.17.1"
rayon = "1.3.1"
thiserror = "1.0"

[dev-dependencies]
micro_config = { path = "../../lib/config", version = "1.0" }
micro_utils = { path = "../../lib/utils", version = "1.0" }

assert_matches = "1.5.0"
clap = { version = "4.2.2", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["hex"] }
tempfile = "3.0.2"
